# ntfy.desktop

./: .gitignore  LICENSE  README.md  TESTING_INFRASTRUCTURE_SUMMARY.md  WINDOWS_BUILD_GUIDE.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  test-release.yml  test.yml  windows-build.yml  windows-release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: ARCHITECTURE.md
performance-tests/: README.md  SETUP_COMPLETE.md  package.json
performance-tests/baseline/: baseline-1772165700787.json  baseline-1772165965966.json  electron-baseline.md
performance-tests/comparison/: README-METRICS.md  comparison-1772165120456.json  comparison-1772166317358.json  comparison-1772198809875.json  (+2 more)
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  build_log.txt  bump-version.sh  package-managers.sh  release.sh  release.sh.backup  setup.sh  signing-setup.sh  updater-setup.sh  versioning.sh
src/: index.html  settings.html  welcome.html
src-tauri/: Cargo.toml  build.rs  set_creds.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  credentials.rs  lib.rs  main.rs  notifications.rs  ntfy.rs  performance.rs
src-tauri/tests/: lib.rs
src-tauri/tests/integration/: app_flow_tests.rs  mod.rs  window_management_tests.rs
src-tauri/tests/unit/: config_tests.rs  mod.rs  notification_tests.rs  ntfy_tests.rs  window_tests.rs
test-backend/: Cargo.toml
tests/: README.md
(+16 files in other folders)
